testdata/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-authz
  namespace: test
  labels:
    app: envoy-authz
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      name: envoy-authz
      labels:
        app: envoy-authz
        version: v1
    spec:
      containers:
        - name: envoy-authz
          image: envoy-auth:v1
          imagePullPolicy: IfNotPresent
          env:
            - name: "AUTHZ_ALLOW"
              value: "true"
          ports:
            - containerPort: 9999
              name: grpc
              protocol: TCP
            - containerPort: 8080
              name: http
              protocol: TCP
      restartPolicy: Always
  selector:
    matchLabels:
      app: envoy-authz
      version: v1
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-authz
  namespace: test
spec:
  selector:
    app: envoy-authz
    version: v1
  ports:
    - port: 9999
      name: grpc
      targetPort: 9999
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: test
spec:
  selector:
    app: envoy-authz
    version: v1
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  type: ClusterIP
